qt/gen_qplaintextedit.h

typedef QAbstractTextDocumentLayout::PaintContext QAbstractTextDocumentLayout__PaintContext;
typedef struct QAbstractTextDocumentLayout__PaintContext QAbstractTextDocumentLayout__PaintContext;
typedef struct QActionEvent QActionEvent;
typedef struct QChildEvent QChildEvent;
typedef struct QCloseEvent QCloseEvent;
typedef struct QEvent QEvent;
typedef struct QHideEvent QHideEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QMoveEvent QMoveEvent;
typedef struct QObject QObject;
typedef struct QPaintDevice QPaintDevice;
typedef struct QPainter QPainter;
typedef struct QPlainTextDocumentLayout QPlainTextDocumentLayout;
typedef struct QPlainTextEdit QPlainTextEdit;
typedef struct QPoint QPoint;
typedef struct QPointF QPointF;
typedef struct QRectF QRectF;
typedef struct QSizeF QSizeF;
typedef struct QTabletEvent QTabletEvent;
typedef struct QTextBlock QTextBlock;
typedef struct QTextDocument QTextDocument;
typedef struct QTextFormat QTextFormat;
typedef struct QTextFrame QTextFrame;
typedef struct QTextInlineObject QTextInlineObject;
typedef struct QTimerEvent QTimerEvent;
bool QPlainTextEdit_override_virtual_enterEvent(void* self, intptr_t slot);
void QPlainTextEdit_virtualbase_enterEvent(void* self, QEvent* event);
bool QPlainTextEdit_override_virtual_leaveEvent(void* self, intptr_t slot);
void QPlainTextEdit_virtualbase_leaveEvent(void* self, QEvent* event);
bool QPlainTextEdit_override_virtual_moveEvent(void* self, intptr_t slot);
void QPlainTextEdit_virtualbase_moveEvent(void* self, QMoveEvent* event);
bool QPlainTextEdit_override_virtual_closeEvent(void* self, intptr_t slot);
void QPlainTextEdit_virtualbase_closeEvent(void* self, QCloseEvent* event);
bool QPlainTextEdit_override_virtual_tabletEvent(void* self, intptr_t slot);
void QPlainTextEdit_virtualbase_tabletEvent(void* self, QTabletEvent* event);
bool QPlainTextEdit_override_virtual_actionEvent(void* self, intptr_t slot);
void QPlainTextEdit_virtualbase_actionEvent(void* self, QActionEvent* event);
bool QPlainTextEdit_override_virtual_hideEvent(void* self, intptr_t slot);
void QPlainTextEdit_virtualbase_hideEvent(void* self, QHideEvent* event);
bool QPlainTextEdit_override_virtual_nativeEvent(void* self, intptr_t slot);
bool QPlainTextEdit_virtualbase_nativeEvent(void* self, struct miqt_string eventType, void* message, long* result);
bool QPlainTextEdit_override_virtual_metric(void* self, intptr_t slot);
int QPlainTextEdit_virtualbase_metric(const void* self, int param1);
bool QPlainTextEdit_override_virtual_initPainter(void* self, intptr_t slot);
void QPlainTextEdit_virtualbase_initPainter(const void* self, QPainter* painter);
bool QPlainTextEdit_override_virtual_redirected(void* self, intptr_t slot);
QPaintDevice* QPlainTextEdit_virtualbase_redirected(const void* self, QPoint* offset);
bool QPlainTextEdit_override_virtual_sharedPainter(void* self, intptr_t slot);
QPainter* QPlainTextEdit_virtualbase_sharedPainter(const void* self);
bool QPlainTextEdit_override_virtual_childEvent(void* self, intptr_t slot);
void QPlainTextEdit_virtualbase_childEvent(void* self, QChildEvent* event);
bool QPlainTextEdit_override_virtual_customEvent(void* self, intptr_t slot);
void QPlainTextEdit_virtualbase_customEvent(void* self, QEvent* event);
bool QPlainTextEdit_override_virtual_connectNotify(void* self, intptr_t slot);
void QPlainTextEdit_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QPlainTextEdit_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QPlainTextEdit_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
void QPlainTextEdit_delete(QPlainTextEdit* self);
QPlainTextDocumentLayout* QPlainTextDocumentLayout_new(QTextDocument* document);
QMetaObject* QPlainTextDocumentLayout_metaObject(const QPlainTextDocumentLayout* self);
void* QPlainTextDocumentLayout_metacast(QPlainTextDocumentLayout* self, const char* param1);
int QPlainTextDocumentLayout_metacall(QPlainTextDocumentLayout* self, int param1, int param2, void** param3);
struct miqt_string QPlainTextDocumentLayout_tr(const char* s);
struct miqt_string QPlainTextDocumentLayout_trUtf8(const char* s);
void QPlainTextDocumentLayout_draw(QPlainTextDocumentLayout* self, QPainter* param1, QAbstractTextDocumentLayout__PaintContext* param2);
int QPlainTextDocumentLayout_hitTest(const QPlainTextDocumentLayout* self, QPointF* param1, int param2);
int QPlainTextDocumentLayout_pageCount(const QPlainTextDocumentLayout* self);
QSizeF* QPlainTextDocumentLayout_documentSize(const QPlainTextDocumentLayout* self);
QRectF* QPlainTextDocumentLayout_frameBoundingRect(const QPlainTextDocumentLayout* self, QTextFrame* param1);
QRectF* QPlainTextDocumentLayout_blockBoundingRect(const QPlainTextDocumentLayout* self, QTextBlock* block);
void QPlainTextDocumentLayout_ensureBlockLayout(const QPlainTextDocumentLayout* self, QTextBlock* block);
void QPlainTextDocumentLayout_setCursorWidth(QPlainTextDocumentLayout* self, int width);
int QPlainTextDocumentLayout_cursorWidth(const QPlainTextDocumentLayout* self);
void QPlainTextDocumentLayout_requestUpdate(QPlainTextDocumentLayout* self);
struct miqt_string QPlainTextDocumentLayout_tr2(const char* s, const char* c);
struct miqt_string QPlainTextDocumentLayout_tr3(const char* s, const char* c, int n);
struct miqt_string QPlainTextDocumentLayout_trUtf82(const char* s, const char* c);
struct miqt_string QPlainTextDocumentLayout_trUtf83(const char* s, const char* c, int n);
bool QPlainTextDocumentLayout_override_virtual_metacall(void* self, intptr_t slot);
int QPlainTextDocumentLayout_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QPlainTextDocumentLayout_override_virtual_draw(void* self, intptr_t slot);
void QPlainTextDocumentLayout_virtualbase_draw(void* self, QPainter* param1, QAbstractTextDocumentLayout__PaintContext* param2);
bool QPlainTextDocumentLayout_override_virtual_hitTest(void* self, intptr_t slot);
int QPlainTextDocumentLayout_virtualbase_hitTest(const void* self, QPointF* param1, int param2);
bool QPlainTextDocumentLayout_override_virtual_pageCount(void* self, intptr_t slot);
int QPlainTextDocumentLayout_virtualbase_pageCount(const void* self);
bool QPlainTextDocumentLayout_override_virtual_documentSize(void* self, intptr_t slot);
QSizeF* QPlainTextDocumentLayout_virtualbase_documentSize(const void* self);
bool QPlainTextDocumentLayout_override_virtual_frameBoundingRect(void* self, intptr_t slot);
QRectF* QPlainTextDocumentLayout_virtualbase_frameBoundingRect(const void* self, QTextFrame* param1);
bool QPlainTextDocumentLayout_override_virtual_blockBoundingRect(void* self, intptr_t slot);
QRectF* QPlainTextDocumentLayout_virtualbase_blockBoundingRect(const void* self, QTextBlock* block);
bool QPlainTextDocumentLayout_override_virtual_documentChanged(void* self, intptr_t slot);
void QPlainTextDocumentLayout_virtualbase_documentChanged(void* self, int from, int param2, int charsAdded);
bool QPlainTextDocumentLayout_override_virtual_resizeInlineObject(void* self, intptr_t slot);
void QPlainTextDocumentLayout_virtualbase_resizeInlineObject(void* self, QTextInlineObject* item, int posInDocument, QTextFormat* format);
bool QPlainTextDocumentLayout_override_virtual_positionInlineObject(void* self, intptr_t slot);
void QPlainTextDocumentLayout_virtualbase_positionInlineObject(void* self, QTextInlineObject* item, int posInDocument, QTextFormat* format);
bool QPlainTextDocumentLayout_override_virtual_drawInlineObject(void* self, intptr_t slot);
void QPlainTextDocumentLayout_virtualbase_drawInlineObject(void* self, QPainter* painter, QRectF* rect, QTextInlineObject* object, int posInDocument, QTextFormat* format);
bool QPlainTextDocumentLayout_override_virtual_event(void* self, intptr_t slot);
bool QPlainTextDocumentLayout_virtualbase_event(void* self, QEvent* event);
bool QPlainTextDocumentLayout_override_virtual_eventFilter(void* self, intptr_t slot);
bool QPlainTextDocumentLayout_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QPlainTextDocumentLayout_override_virtual_timerEvent(void* self, intptr_t slot);
void QPlainTextDocumentLayout_virtualbase_timerEvent(void* self, QTimerEvent* event);
void QPlainTextDocumentLayout_virtualbase_childEvent(void* self, QChildEvent* event);