qt/gen_qplaintextedit.nim

proc fQPlainTextEdit_virtualbase_enterEvent(self: pointer, event: pointer): void{.importc: "QPlainTextEdit_virtualbase_enterEvent".}
proc fcQPlainTextEdit_override_virtual_enterEvent(self: pointer, slot: int) {.importc: "QPlainTextEdit_override_virtual_enterEvent".}
proc fQPlainTextEdit_virtualbase_leaveEvent(self: pointer, event: pointer): void{.importc: "QPlainTextEdit_virtualbase_leaveEvent".}
proc fcQPlainTextEdit_override_virtual_leaveEvent(self: pointer, slot: int) {.importc: "QPlainTextEdit_override_virtual_leaveEvent".}
proc fQPlainTextEdit_virtualbase_moveEvent(self: pointer, event: pointer): void{.importc: "QPlainTextEdit_virtualbase_moveEvent".}
proc fcQPlainTextEdit_override_virtual_moveEvent(self: pointer, slot: int) {.importc: "QPlainTextEdit_override_virtual_moveEvent".}
proc fQPlainTextEdit_virtualbase_closeEvent(self: pointer, event: pointer): void{.importc: "QPlainTextEdit_virtualbase_closeEvent".}
proc fcQPlainTextEdit_override_virtual_closeEvent(self: pointer, slot: int) {.importc: "QPlainTextEdit_override_virtual_closeEvent".}
proc fQPlainTextEdit_virtualbase_tabletEvent(self: pointer, event: pointer): void{.importc: "QPlainTextEdit_virtualbase_tabletEvent".}
proc fcQPlainTextEdit_override_virtual_tabletEvent(self: pointer, slot: int) {.importc: "QPlainTextEdit_override_virtual_tabletEvent".}
proc fQPlainTextEdit_virtualbase_actionEvent(self: pointer, event: pointer): void{.importc: "QPlainTextEdit_virtualbase_actionEvent".}
proc fcQPlainTextEdit_override_virtual_actionEvent(self: pointer, slot: int) {.importc: "QPlainTextEdit_override_virtual_actionEvent".}
proc fQPlainTextEdit_virtualbase_hideEvent(self: pointer, event: pointer): void{.importc: "QPlainTextEdit_virtualbase_hideEvent".}
proc fcQPlainTextEdit_override_virtual_hideEvent(self: pointer, slot: int) {.importc: "QPlainTextEdit_override_virtual_hideEvent".}
proc fQPlainTextEdit_virtualbase_nativeEvent(self: pointer, eventType: struct_miqt_string, message: pointer, resultVal: ptr clong): bool{.importc: "QPlainTextEdit_virtualbase_nativeEvent".}
proc fcQPlainTextEdit_override_virtual_nativeEvent(self: pointer, slot: int) {.importc: "QPlainTextEdit_override_virtual_nativeEvent".}
proc fQPlainTextEdit_virtualbase_metric(self: pointer, param1: cint): cint{.importc: "QPlainTextEdit_virtualbase_metric".}
proc fcQPlainTextEdit_override_virtual_metric(self: pointer, slot: int) {.importc: "QPlainTextEdit_override_virtual_metric".}
proc fQPlainTextEdit_virtualbase_initPainter(self: pointer, painter: pointer): void{.importc: "QPlainTextEdit_virtualbase_initPainter".}
proc fcQPlainTextEdit_override_virtual_initPainter(self: pointer, slot: int) {.importc: "QPlainTextEdit_override_virtual_initPainter".}
proc fQPlainTextEdit_virtualbase_redirected(self: pointer, offset: pointer): pointer{.importc: "QPlainTextEdit_virtualbase_redirected".}
proc fcQPlainTextEdit_override_virtual_redirected(self: pointer, slot: int) {.importc: "QPlainTextEdit_override_virtual_redirected".}
proc fQPlainTextEdit_virtualbase_sharedPainter(self: pointer, ): pointer{.importc: "QPlainTextEdit_virtualbase_sharedPainter".}
proc fcQPlainTextEdit_override_virtual_sharedPainter(self: pointer, slot: int) {.importc: "QPlainTextEdit_override_virtual_sharedPainter".}
proc fQPlainTextEdit_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QPlainTextEdit_virtualbase_childEvent".}
proc fcQPlainTextEdit_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QPlainTextEdit_override_virtual_childEvent".}
proc fQPlainTextEdit_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QPlainTextEdit_virtualbase_customEvent".}
proc fcQPlainTextEdit_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QPlainTextEdit_override_virtual_customEvent".}
proc fQPlainTextEdit_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QPlainTextEdit_virtualbase_connectNotify".}
proc fcQPlainTextEdit_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QPlainTextEdit_override_virtual_connectNotify".}
proc fQPlainTextEdit_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QPlainTextEdit_virtualbase_disconnectNotify".}
proc fcQPlainTextEdit_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QPlainTextEdit_override_virtual_disconnectNotify".}
proc fcQPlainTextEdit_delete(self: pointer) {.importc: "QPlainTextEdit_delete".}
proc fcQPlainTextDocumentLayout_new(document: pointer): ptr cQPlainTextDocumentLayout {.importc: "QPlainTextDocumentLayout_new".}
proc fcQPlainTextDocumentLayout_metaObject(self: pointer, ): pointer {.importc: "QPlainTextDocumentLayout_metaObject".}
proc fcQPlainTextDocumentLayout_metacast(self: pointer, param1: cstring): pointer {.importc: "QPlainTextDocumentLayout_metacast".}
proc fcQPlainTextDocumentLayout_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QPlainTextDocumentLayout_metacall".}
proc fcQPlainTextDocumentLayout_tr(s: cstring): struct_miqt_string {.importc: "QPlainTextDocumentLayout_tr".}
proc fcQPlainTextDocumentLayout_trUtf8(s: cstring): struct_miqt_string {.importc: "QPlainTextDocumentLayout_trUtf8".}
proc fcQPlainTextDocumentLayout_draw(self: pointer, param1: pointer, param2: pointer): void {.importc: "QPlainTextDocumentLayout_draw".}
proc fcQPlainTextDocumentLayout_hitTest(self: pointer, param1: pointer, param2: cint): cint {.importc: "QPlainTextDocumentLayout_hitTest".}
proc fcQPlainTextDocumentLayout_pageCount(self: pointer, ): cint {.importc: "QPlainTextDocumentLayout_pageCount".}
proc fcQPlainTextDocumentLayout_documentSize(self: pointer, ): pointer {.importc: "QPlainTextDocumentLayout_documentSize".}
proc fcQPlainTextDocumentLayout_frameBoundingRect(self: pointer, param1: pointer): pointer {.importc: "QPlainTextDocumentLayout_frameBoundingRect".}
proc fcQPlainTextDocumentLayout_blockBoundingRect(self: pointer, blockVal: pointer): pointer {.importc: "QPlainTextDocumentLayout_blockBoundingRect".}
proc fcQPlainTextDocumentLayout_ensureBlockLayout(self: pointer, blockVal: pointer): void {.importc: "QPlainTextDocumentLayout_ensureBlockLayout".}
proc fcQPlainTextDocumentLayout_setCursorWidth(self: pointer, width: cint): void {.importc: "QPlainTextDocumentLayout_setCursorWidth".}
proc fcQPlainTextDocumentLayout_cursorWidth(self: pointer, ): cint {.importc: "QPlainTextDocumentLayout_cursorWidth".}
proc fcQPlainTextDocumentLayout_requestUpdate(self: pointer, ): void {.importc: "QPlainTextDocumentLayout_requestUpdate".}
proc fcQPlainTextDocumentLayout_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QPlainTextDocumentLayout_tr2".}
proc fcQPlainTextDocumentLayout_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QPlainTextDocumentLayout_tr3".}
proc fcQPlainTextDocumentLayout_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QPlainTextDocumentLayout_trUtf82".}
proc fcQPlainTextDocumentLayout_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QPlainTextDocumentLayout_trUtf83".}
proc fQPlainTextDocumentLayout_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QPlainTextDocumentLayout_virtualbase_metacall".}
proc fcQPlainTextDocumentLayout_override_virtual_metacall(self: pointer, slot: int) {.importc: "QPlainTextDocumentLayout_override_virtual_metacall".}
proc fQPlainTextDocumentLayout_virtualbase_draw(self: pointer, param1: pointer, param2: pointer): void{.importc: "QPlainTextDocumentLayout_virtualbase_draw".}
proc fcQPlainTextDocumentLayout_override_virtual_draw(self: pointer, slot: int) {.importc: "QPlainTextDocumentLayout_override_virtual_draw".}
proc fQPlainTextDocumentLayout_virtualbase_hitTest(self: pointer, param1: pointer, param2: cint): cint{.importc: "QPlainTextDocumentLayout_virtualbase_hitTest".}
proc fcQPlainTextDocumentLayout_override_virtual_hitTest(self: pointer, slot: int) {.importc: "QPlainTextDocumentLayout_override_virtual_hitTest".}
proc fQPlainTextDocumentLayout_virtualbase_pageCount(self: pointer, ): cint{.importc: "QPlainTextDocumentLayout_virtualbase_pageCount".}
proc fcQPlainTextDocumentLayout_override_virtual_pageCount(self: pointer, slot: int) {.importc: "QPlainTextDocumentLayout_override_virtual_pageCount".}
proc fQPlainTextDocumentLayout_virtualbase_documentSize(self: pointer, ): pointer{.importc: "QPlainTextDocumentLayout_virtualbase_documentSize".}
proc fcQPlainTextDocumentLayout_override_virtual_documentSize(self: pointer, slot: int) {.importc: "QPlainTextDocumentLayout_override_virtual_documentSize".}
proc fQPlainTextDocumentLayout_virtualbase_frameBoundingRect(self: pointer, param1: pointer): pointer{.importc: "QPlainTextDocumentLayout_virtualbase_frameBoundingRect".}
proc fcQPlainTextDocumentLayout_override_virtual_frameBoundingRect(self: pointer, slot: int) {.importc: "QPlainTextDocumentLayout_override_virtual_frameBoundingRect".}
proc fQPlainTextDocumentLayout_virtualbase_blockBoundingRect(self: pointer, blockVal: pointer): pointer{.importc: "QPlainTextDocumentLayout_virtualbase_blockBoundingRect".}
proc fcQPlainTextDocumentLayout_override_virtual_blockBoundingRect(self: pointer, slot: int) {.importc: "QPlainTextDocumentLayout_override_virtual_blockBoundingRect".}
proc fQPlainTextDocumentLayout_virtualbase_documentChanged(self: pointer, fromVal: cint, param2: cint, charsAdded: cint): void{.importc: "QPlainTextDocumentLayout_virtualbase_documentChanged".}
proc fcQPlainTextDocumentLayout_override_virtual_documentChanged(self: pointer, slot: int) {.importc: "QPlainTextDocumentLayout_override_virtual_documentChanged".}
proc fQPlainTextDocumentLayout_virtualbase_resizeInlineObject(self: pointer, item: pointer, posInDocument: cint, format: pointer): void{.importc: "QPlainTextDocumentLayout_virtualbase_resizeInlineObject".}
proc fcQPlainTextDocumentLayout_override_virtual_resizeInlineObject(self: pointer, slot: int) {.importc: "QPlainTextDocumentLayout_override_virtual_resizeInlineObject".}
proc fQPlainTextDocumentLayout_virtualbase_positionInlineObject(self: pointer, item: pointer, posInDocument: cint, format: pointer): void{.importc: "QPlainTextDocumentLayout_virtualbase_positionInlineObject".}
proc fcQPlainTextDocumentLayout_override_virtual_positionInlineObject(self: pointer, slot: int) {.importc: "QPlainTextDocumentLayout_override_virtual_positionInlineObject".}
proc fQPlainTextDocumentLayout_virtualbase_drawInlineObject(self: pointer, painter: pointer, rect: pointer, objectVal: pointer, posInDocument: cint, format: pointer): void{.importc: "QPlainTextDocumentLayout_virtualbase_drawInlineObject".}
proc fcQPlainTextDocumentLayout_override_virtual_drawInlineObject(self: pointer, slot: int) {.importc: "QPlainTextDocumentLayout_override_virtual_drawInlineObject".}
proc fQPlainTextDocumentLayout_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QPlainTextDocumentLayout_virtualbase_event".}
proc fcQPlainTextDocumentLayout_override_virtual_event(self: pointer, slot: int) {.importc: "QPlainTextDocumentLayout_override_virtual_event".}
proc fQPlainTextDocumentLayout_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QPlainTextDocumentLayout_virtualbase_eventFilter".}
proc fcQPlainTextDocumentLayout_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QPlainTextDocumentLayout_override_virtual_eventFilter".}
proc fQPlainTextDocumentLayout_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QPlainTextDocumentLayout_virtualbase_timerEvent".}
proc fcQPlainTextDocumentLayout_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QPlainTextDocumentLayout_override_virtual_timerEvent".}
proc fQPlainTextDocumentLayout_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QPlainTextDocumentLayout_virtualbase_childEvent".}
